add update on html and css

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <title>My Portfolio Landing page</title>
 </head>
 <body>
-    <div>
-        <div>
-            <h1>My Picture</h1>
-            <img src="img1.jpg" alt="">
-        </div>
+    <div id="nav">
+        <nav>
+            <a href="#home">Home.</a>
+            <a href="#projects">Projects.</a>
+            <a href="#about-me-section">About me.</a>
+            <a href="#skills">Skills.</a>
+        </nav>
     </div>
+    <div id="home">
+        <h1>Arnold Ngare </h1>
+        <p>Hello There</p>
+        <p>I'm Arnold Ngare,
+         a programming student in Moringa school who is very passionate in coding.</p>
+        <img src="image.jpg" alt="">
+    </div>
+    
     
 </body>
 </html>
