update html and css

--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
             <a href="#skills">Skills.</a>
         </nav>
     </div>
-    <div id="home">
-        <h1>Arnold Ngare </h1>
-        <p>Hello There</p>
-        <p>I'm Arnold Ngare,
-         a programming student in Moringa school who is very passionate in coding.</p>
-        <img src="image.jpg" alt="">
+    <div>
+        <div id="home">
+                <h1>Arnold Ngare </h1>
+                <p>Hello There</p>
+                <p>I'm Arnold Ngare,
+                 a programming student in Moringa school who is very passionate in coding.</p>  
+        </div>
+        <div id="my-img">
+            <img src="img1.jpg" alt="">
+        </div>
     </div>
-    
     
 </body>
 </html>
