--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
             </div>
         </div>
     </div>
+    <div class="hobbies">
+        <h2>Hobbies</h2>
+        <ul>
+            <li>Swimming</li>
+            <li>Playing football</li>
+            <li>Listening to music</li>
+            <li>Playing video games</li>
+        </ul>
+    </div>
     
 </body>
 </html>
