update html and css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    
     <div class="skills">
         <div class="wrapper">
-            <h1>High Skill Areas</h1>
+            <h1>Skills</h1>
             <div class="skill-grid h1-text">
             </div>
             <div class="skill-grid">
@@ -88,6 +88,19 @@
             <li>Listening to music</li>
             <li>Playing video games</li>
         </ul>
+    </div>
+    <div class="work-part">
+        <h2>Work Samples</h2>
+        <div id="fav-band">
+            <h3>Favourite Band</h3>
+            The project was about a group of bad called Migos.
+            In this project i was supposed to create a webpage about the group and state each member of the group.
+            After stating them, i added each members life experience, career, and their albums.
+        </div>
+        <div id="ktcn">
+            <h3>Anitas Kitchen</h3>
+            This is Anita's Kitchen. The Kitchen details the prodicts and services that are sold in Anitas restourant. This tech based solution, seeks to link Anitas Kitchen with Anita's potential clientel. If you want to have a tase of what Anita prepares, feel free to click the link and tour the site. This site is built on html and CSS.
+        </div>
     </div>
     
 </body>
