update html and css

--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
             After 4yrs in 2018 i did my KCSE.In my interest in coding someone recomended me to check Moringa school. <br>
             I joined Moringa school till now.
         </p>
-
     </div>
+    <footer class="footer">
+        <p>copyright(c)@Ngare 2021.All Rights Reserved.</p>
+    </footer>
     
    
 </body>
