--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     <div class="work-part">
         <div id="work-samples">
-            <h2>Work Samples</h2>
+            <h2>Projects</h2>
             <h3>Favourite Band</h3>
             The project was about a group of bad called Migos.
             In this project i was supposed to create a webpage about the group and state each member of the group.
